fix some grid issues. add wrap class

--- a/styl/16_grid.styl
+++ b/styl/16_grid.styl
@@ -1,3 +1,8 @@
+.wrap {
+	max-width: var(gridWidth)px;
+	margin: 0 auto;
+}
+
 /*Grid*/
 .units-container,
 .units-row-end,
